--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Heebo&display=swap');
+
+body {
+  background: #fffffe;
+  font-family: 'Heebo', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#header {
+  background-color: #fffffe !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.url-box {
+  border-radius: 0 !important;
+  border: 1px solid #2b2c34 !important;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.url-box:focus {
+  border: 1px solid #6246ea !important;
 }
 
-.App-link {
-  color: #61dafb;
+.result {
+  width: 500px;
+  margin: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.headline {
+  color: #2b2c34;
+}
+
+.f-bold {
+  font-weight: bold;
+}
+
+.fetch-btn {
+  border-radius: 0 !important;
+  background-color: #6246ea !important;
+  border: 1px solid #6246ea !important;
+  color: #fffffe !important;
+}
+
+.download-btn {
+  background-color: #6246ea !important;
+  color: #fffffe !important;
+}
+
+.resize {
+  width: 300px;
+  height: auto;
+}
+
+.resize {
+  width: 200px;
+  height: auto;
 }
